* documentation * small changes

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,6 @@
 all: intro api meta meta_api
-	cat intro_menu.html _intro.html _api.html > index.html
-	cat meta_menu.html _meta.html _meta_api.html > meta.html
+	cat intro_menu.html _intro.html _api.html bottom.html > index.html
+	cat meta_menu.html _meta.html _meta_api.html bottom.html > meta.html
 	rm _*.html
 
 intro:
@@ -15,5 +15,6 @@ meta:
 meta_api:
 	markdown meta_api.txt > _meta_api.html
 
-release:
-	tar cvzf homepage.tgz ../../luagravity-0.5.tgz ../../ldirectfb-0.1.tgz *
+upload:
+	scp doc.css index.html meta.html *.png lua.gif \
+		francisco@www.lua.inf.puc-rio.br:/opt/share/www/luagravity/
