--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,8 @@
 all:
-	lua 1.lua
-	lua 2.lua
-	lua cycle.lua
-	lua height.lua
-	lua call.lua
-	lua expr.lua
-	lua meta.lua
+	lua 1.lua 2>/dev/null
+	lua 2.lua 2>/dev/null
+	lua cycle.lua 2>/dev/null
+	lua height.lua 2>/dev/null
+	lua call.lua 2>/dev/null
+	lua expr.lua 2>/dev/null
+	lua meta.lua 2>/dev/null
