* few adjusts in the documentation * no more globals, supports multi applications * call = await(spawn) * unify action/edgeType * loop/step/start adjusts

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,7 @@
 all:
 	lua 1.lua 2>/dev/null
 	lua 2.lua 2>/dev/null
+	lua multi.lua 2>/dev/null
 	lua cycle.lua 2>/dev/null
 	lua height.lua 2>/dev/null
 	lua call.lua 2>/dev/null
